--- a/acronym-defs.sty
+++ b/acronym-defs.sty
@@ -8,6 +8,7 @@
 \newcommand{\mbts}{\ac{MBTS}\xspace}
 \renewcommand{\mc}{\ac{MC}\xspace} %% we won't use m_{C}
 \newcommand{\minbias}{\ac{MinBias}\xspace}
+\newcommand{\pid}{\ac{PID}\xspace}
 \newcommand{\qgp}{\ac{QGP}\xspace}
 \newcommand{\qcd}{\ac{QCD}\xspace}
 \newcommand{\rf}{\ac{RF}\xspace}
