--- a/acronyms.tex
+++ b/acronyms.tex
@@ -21,6 +21,7 @@
   \acro{MBTS}{Minimum Bias Trigger Scintillator}
   \acro{MinBias}{minimum bias}
   \acro{MC}{Monte Carlo}
+  \acro{PID}{particle identification}
   \acro{PS}{Proton Synchrotron}
   \acro{PSB}{Proton Synchrotron Booster}
   \acro{PV}{primary vertex}
