--- a/bibtex/bib/experiment.bib
+++ b/bibtex/bib/experiment.bib
@@ -32,6 +32,16 @@
       reportNumber   = "CERN-PH-EP-2015-153, LHCB-PAPER-2015-029",
       SLACcitation   = "%%CITATION = ARXIV:1507.03414;%%"
 }
+@article{Chadwick:1932ma,
+      author         = "Chadwick, J.",
+      title          = "{Possible Existence of a Neutron}",
+      journal        = "Nature",
+      volume         = "129",
+      year           = "1932",
+      pages          = "312",
+      doi            = "10.1038/129312a0",
+      SLACcitation   = "%%CITATION = NATUA,129,312;%%"
+}
 @article{Chatrchyan:2012xdj,
       author         = "Chatrchyan, Serguei and others",
       title          = "{Observation of a new boson at a mass of 125 GeV with the
@@ -47,6 +57,21 @@
       primaryClass   = "hep-ex",
       reportNumber   = "CMS-HIG-12-028, CERN-PH-EP-2012-220",
       SLACcitation   = "%%CITATION = ARXIV:1207.7235;%%"
+}
+@article{Lattes:1947mw,
+      author         = "Lattes, C. M. G. and Muirhead, H. and Occhialini, G. P.
+                        S. and Powell, C. F.",
+      title          = "{PROCESSES INVOLVING CHARGED MESONS}",
+      booktitle      = "{International Conference to Celebrate the 40th
+                        Anniversary of the Pion (40 PI) Bristol, England, July
+                        22-24, 1987}",
+      journal        = "Nature",
+      volume         = "159",
+      year           = "1947",
+      pages          = "694-697",
+      doi            = "10.1038/159694a0",
+      note           = "[,42(1947)]",
+      SLACcitation   = "%%CITATION = NATUA,159,694;%%"
 }
 @article{PhysRev.43.149,
   title = {The Electrostatic Production of High Voltage for Nuclear Investigations},
