--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -96,3 +96,16 @@
       doi            = "10.1103/PhysRevD.98.030001",
       SLACcitation   = "%%CITATION = PHRVA,D98,030001;%%"
 }
+@article{Yukawa:1935xg,
+      author         = "Yukawa, Hideki",
+      title          = "{On the Interaction of Elementary Particles I}",
+      journal        = "Proc. Phys. Math. Soc. Jap.",
+      volume         = "17",
+      year           = "1935",
+      pages          = "48-57",
+      doi            = "10.1143/PTPS.1.1",
+      note           = "[Prog. Theor. Phys. Suppl.1,1(1935)]",
+      reportNumber   = "PRINT-92-0144",
+      SLACcitation   = "%%CITATION = PPMJA,17,48;%%"
+}
+
