next intro paragraph

--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -19,6 +19,16 @@
       reportNumber   = "CERN-EP-2003-075",
       SLACcitation   = "%%CITATION = RMPHA,75,1243;%%"
 }
+@article{GellMann:1962xb,
+      author         = "Gell-Mann, Murray",
+      title          = "{Symmetries of baryons and mesons}",
+      journal        = "Phys. Rev.",
+      volume         = "125",
+      year           = "1962",
+      pages          = "1067-1084",
+      doi            = "10.1103/PhysRev.125.1067",
+      SLACcitation   = "%%CITATION = PHRVA,125,1067;%%"
+}
 @article{Gross:1973ju,
       author         = "Gross, D. J. and Wilczek, Frank",
       title          = "{Asymptotically Free Gauge Theories - I}",
