--- a/bibtex/bib/experiment.bib
+++ b/bibtex/bib/experiment.bib
@@ -61,7 +61,7 @@
 @article{Lattes:1947mw,
       author         = "Lattes, C. M. G. and Muirhead, H. and Occhialini, G. P.
                         S. and Powell, C. F.",
-      title          = "{PROCESSES INVOLVING CHARGED MESONS}",
+      title          = "{Processes Involving Charged Mesons}",
       booktitle      = "{International Conference to Celebrate the 40th
                         Anniversary of the Pion (40 PI) Bristol, England, July
                         22-24, 1987}",
@@ -70,7 +70,7 @@
       year           = "1947",
       pages          = "694-697",
       doi            = "10.1038/159694a0",
-      note           = "[,42(1947)]",
+      nonote           = "[,42(1947)]",
       SLACcitation   = "%%CITATION = NATUA,159,694;%%"
 }
 @article{PhysRev.43.149,
