--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -1,3 +1,14 @@
+@article{Callan:1969uq,
+      author         = "Callan, Jr., Curtis G. and Gross, David J.",
+      title          = "{High-energy electroproduction and the constitution of
+                        the electric current}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "22",
+      year           = "1969",
+      pages          = "156-159",
+      doi            = "10.1103/PhysRevLett.22.156",
+      SLACcitation   = "%%CITATION = PRLTA,22,156;%%"
+}
 @article{Danielewicz:1984ww,
       author         = "Danielewicz, P. and Gyulassy, M.",
       title          = "{Dissipative Phenomena in Quark Gluon Plasmas}",
@@ -114,8 +125,18 @@
       year           = "1935",
       pages          = "48-57",
       doi            = "10.1143/PTPS.1.1",
-      note           = "[Prog. Theor. Phys. Suppl.1,1(1935)]",
+      nonote           = "[Prog. Theor. Phys. Suppl.1,1(1935)]",
       reportNumber   = "PRINT-92-0144",
       SLACcitation   = "%%CITATION = PPMJA,17,48;%%"
+}
+@article{dis_fig_proceedings,
+author = {Hentschinski, Martin},
+year = {2017},
+month = {10},
+pages = {012008},
+title = {Forward Physics and the glue at small x},
+volume = {912},
+journal = {Journal of Physics: Conference Series},
+doi = {10.1088/1742-6596/912/1/012008}
 }
 
