some more discussion of QCD

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -26,6 +26,7 @@
   \acro{PS}{Proton Synchrotron}
   \acro{PSB}{Proton Synchrotron Booster}
   \acro{PV}{primary vertex}
+  \acro{QED}{quantum electrodynamics}
   \acro{QGP}{quark-gluon plasma}
   \acro{QCD}{quantum chromodynamics}
   \acro{RF}{radio frequency}
