--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -117,6 +117,16 @@
       doi            = "10.1103/PhysRevD.98.030001",
       SLACcitation   = "%%CITATION = PHRVA,D98,030001;%%"
 }
+@article{Wilczek:2000ih,
+      author         = "Wilczek, Frank",
+      title          = "{QCD made simple}",
+      journal        = "Phys. Today",
+      volume         = "53N8",
+      year           = "2000",
+      pages          = "22-28",
+      doi            = "10.1063/1.1310117",
+      SLACcitation   = "%%CITATION = PHTOA,53N8,22;%%"
+}
 @article{Yukawa:1935xg,
       author         = "Yukawa, Hideki",
       title          = "{On the Interaction of Elementary Particles I}",
