--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -1,3 +1,13 @@
+@article{Altarelli:2013tya,
+      author         = "Altarelli, Guido",
+      title          = "{Collider Physics within the Standard Model: a Primer}",
+      year           = "2013",
+      eprint         = "1303.2842",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "RM3-TH-13-1, CERN-PH-TH-2013-020",
+      SLACcitation   = "%%CITATION = ARXIV:1303.2842;%%"
+}
 @article{Callan:1969uq,
       author         = "Callan, Jr., Curtis G. and Gross, David J.",
       title          = "{High-energy electroproduction and the constitution of
@@ -30,6 +40,17 @@
       reportNumber   = "CERN-EP-2003-075",
       SLACcitation   = "%%CITATION = RMPHA,75,1243;%%"
 }
+@article{Faddeev:1967fc,
+      author         = "Faddeev, L. D. and Popov, V. N.",
+      title          = "{Feynman Diagrams for the Yang-Mills Field}",
+      journal        = "Phys. Lett.",
+      volume         = "B25",
+      year           = "1967",
+      pages          = "29-30",
+      doi            = "10.1016/0370-2693(67)90067-6",
+      note           = "[,325(1967)]",
+      SLACcitation   = "%%CITATION = PHLTA,B25,29;%%"
+}
 @article{GellMann:1962xb,
       author         = "Gell-Mann, Murray",
       title          = "{Symmetries of baryons and mesons}",
@@ -39,6 +60,17 @@
       pages          = "1067-1084",
       doi            = "10.1103/PhysRev.125.1067",
       SLACcitation   = "%%CITATION = PHRVA,125,1067;%%"
+}
+@article{Gross:1973id,
+      author         = "Gross, David J. and Wilczek, Frank",
+      title          = "{Ultraviolet Behavior of Nonabelian Gauge Theories}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "30",
+      year           = "1973",
+      pages          = "1343-1346",
+      doi            = "10.1103/PhysRevLett.30.1343",
+      note           = "[,271(1973)]",
+      SLACcitation   = "%%CITATION = PRLTA,30,1343;%%"
 }
 @article{Gross:1973ju,
       author         = "Gross, D. J. and Wilczek, Frank",
