--- a/thesis-defs.sty
+++ b/thesis-defs.sty
@@ -240,6 +240,8 @@ $\hfil\tilde{}\hfil$\crcr\noalign{\kern1.5pt}}}}}
 \newcommand{\Lumi}{\ensuremath{\mathscr{L}}\xspace}
 \newcommand{\Lint}{\ensuremath{L_\mathrm{int}}\xspace}
 
+\newcommand{\lqcd}{\ensuremath{\Lambda_\textrm{QCD}}\xspace}
+
 %% \newcommand{\PbPbenergy}{$\sqrt{s_{\mathrm{NN}}}=2.76~\tev$\xspace}
 \newcommand{\pPbenergy}{$\sqrt{s_{\mathrm{NN}}}=5.02~\tev$\xspace}
 \newcommand{\ppenergy}{$\sqs =13$~\TeV\xspace}
