--- a/acronym-defs.sty
+++ b/acronym-defs.sty
@@ -6,7 +6,7 @@
 \newcommand{\lhc}{\ac{LHC}\xspace}
 \newcommand{\linac}{\ac{linac}\xspace}
 \newcommand{\mbts}{\ac{MBTS}\xspace}
-\renewcommand{\mc}{\ac{MC}\xspace} %% we won't use m_{C}
+\newcommand{\mc}{\ac{MC}\xspace}
 \newcommand{\minbias}{\ac{MinBias}\xspace}
 \newcommand{\pid}{\ac{PID}\xspace}
 \newcommand{\qgp}{\ac{QGP}\xspace}
