--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -159,6 +159,20 @@
       doi            = "10.1063/1.1310117",
       SLACcitation   = "%%CITATION = PHTOA,53N8,22;%%"
 }
+@article{Wilczek:2005az,
+      author         = "Wilczek, Frank",
+      title          = "{Asymptotic freedom: From paradox to paradigm}",
+      journal        = "Proc. Nat. Acad. Sci.",
+      volume         = "102",
+      year           = "2005",
+      pages          = "8403-8413",
+      doi            = "10.1103/RevModPhys.77.857",
+      note           = "[Rev. Mod. Phys.77,857(2005)]",
+      eprint         = "hep-ph/0502113",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/0502113;%%"
+}
 @article{Yukawa:1935xg,
       author         = "Yukawa, Hideki",
       title          = "{On the Interaction of Elementary Particles I}",
