--- a/acronyms.tex
+++ b/acronyms.tex
@@ -18,9 +18,11 @@
   \acro{LEIR}{Low Energy Ion Ring}
   \acro{LHC}{Large Hadron Collider}
   \acro{linac}{linear particle accelerator}
+  \acro{LO}{leading order}
   \acro{MBTS}{Minimum Bias Trigger Scintillator}
   \acro{MinBias}{minimum bias}
   \acro{MC}{Monte Carlo}
+  \acro{NLO}{next-to-leading order}
   \acro{PDF}{parton distribution function}
   \acro{PID}{particle identification}
   \acro{PS}{Proton Synchrotron}
