--- a/bibtex/bib/experiment.bib
+++ b/bibtex/bib/experiment.bib
@@ -43,7 +43,8 @@
       SLACcitation   = "%%CITATION = NATUA,129,312;%%"
 }
 @article{Chatrchyan:2012xdj,
-      author         = "Chatrchyan, Serguei and others",
+      noauthor         = "Chatrchyan, Serguei and others",
+      author         = "{CMS Collaboration}",
       title          = "{Observation of a new boson at a mass of 125 GeV with the
                         CMS experiment at the LHC}",
       collaboration  = "CMS",
