--- a/bibtex/bib/techreport.bib
+++ b/bibtex/bib/techreport.bib
@@ -9,7 +9,7 @@
       SLACcitation   = "%%CITATION = JINST,3,S08001;%%"
 }
 @article{Aad:2008zz,
-      author         = "Aad, G. and others",
+      author         = "{ATLAS Collaboration}",
       title          = "{ATLAS pixel detector electronics and sensors}",
       journal        = "JINST",
       volume         = "3",
@@ -60,7 +60,7 @@
       SLACcitation   = "%%CITATION = ARXIV:1110.1530;%%"
 }
 @article{Aad:2014mta,
-      author         = "Aad, Georges and others",
+      author         = "{ATLAS Collaboration}",
       title          = "{Operation and performance of the ATLAS semiconductor
                         tracker}",
       collaboration  = "ATLAS",
@@ -239,6 +239,7 @@
       SLACcitation   = "%%CITATION = CERN-LHCC-2003-022;%%"
 }
 @article{ATLAS:2012jma,
+      author         = "{ATLAS Collaboration}",
       title          = "{Performance of the ATLAS Inner Detector Track and Vertex
                         Reconstruction in the High Pile-Up LHC Environment}",
       collaboration  = "ATLAS",
