color confinement and some plots for EOS

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -10,6 +10,7 @@
   \acro{FCal}{forward calorimeter}
   \acro{HEC}{hadronic end-cap}
   \acro{HLT}{High Level Trigger}
+  \acro{HRG}{hadron resonance gas}
   \acro{ID}{inner detector}
   \acro{IP}{interaction point}
   \acro{L1}{Level-1}
@@ -28,9 +29,9 @@
   \acro{PS}{Proton Synchrotron}
   \acro{PSB}{Proton Synchrotron Booster}
   \acro{PV}{primary vertex}
+  \acro{QCD}{quantum chromodynamics}
   \acro{QED}{quantum electrodynamics}
   \acro{QGP}{quark-gluon plasma}
-  \acro{QCD}{quantum chromodynamics}
   \acro{RF}{radio frequency}
   \acro{SCT}{semi-conductor tracker}
   \acro{SLAC}{Stanford Linear Accelerator Center}
