--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -8,6 +8,56 @@
       reportNumber   = "RM3-TH-13-1, CERN-PH-TH-2013-020",
       SLACcitation   = "%%CITATION = ARXIV:1303.2842;%%"
 }
+@article{Aoki:2016frl,
+      author         = "Aoki, S. and others",
+      title          = "{Review of lattice results concerning low-energy particle
+                        physics}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C77",
+      year           = "2017",
+      number         = "2",
+      pages          = "112",
+      doi            = "10.1140/epjc/s10052-016-4509-7",
+      eprint         = "1607.00299",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-lat",
+      reportNumber   = "CP3-Origins-2016-023, DESY-16-111, DIAS-2016-23,
+                        Edinburgh-2016-11, FTUAM-16-23, HIM-2016-02,
+                        IFT-UAM-CSIC-16-057, LPT-Orsay-16-47, MITP-16-059,
+                        RM3-TH-16-7, ROM2F-2016-05, YITP-16-77",
+      SLACcitation   = "%%CITATION = ARXIV:1607.00299;%%"
+}
+@article{Bazavov:2014pvz,
+      author         = "Bazavov, A. and others",
+      title          = "{Equation of state in ( 2+1 )-flavor QCD}",
+      collaboration  = "HotQCD",
+      journal        = "Phys. Rev.",
+      volume         = "D90",
+      year           = "2014",
+      pages          = "094503",
+      doi            = "10.1103/PhysRevD.90.094503",
+      eprint         = "1407.6387",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-lat",
+      reportNumber   = "BNL-105928-2014-JA",
+      SLACcitation   = "%%CITATION = ARXIV:1407.6387;%%"
+}
+@article{Borsanyi:2013bia,
+      author         = "Borsanyi, Szabocls and Fodor, Zoltan and Hoelbling,
+                        Christian and Katz, Sandor D. and Krieg, Stefan and Szabo,
+                        Kalman K.",
+      title          = "{Full result for the QCD equation of state with 2+1
+                        flavors}",
+      journal        = "Phys. Lett.",
+      volume         = "B730",
+      year           = "2014",
+      pages          = "99-104",
+      doi            = "10.1016/j.physletb.2014.01.007",
+      eprint         = "1309.5258",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-lat",
+      SLACcitation   = "%%CITATION = ARXIV:1309.5258;%%"
+}
 @article{Callan:1969uq,
       author         = "Callan, Jr., Curtis G. and Gross, David J.",
       title          = "{High-energy electroproduction and the constitution of
@@ -28,6 +78,19 @@
       pages          = "53-62",
       doi            = "10.1103/PhysRevD.31.53",
       SLACcitation   = "%%CITATION = PHRVA,D31,53;%%"
+}
+@article{Durr:2008zz,
+      author         = "Durr, S. and others",
+      title          = "{Ab-Initio Determination of Light Hadron Masses}",
+      journal        = "Science",
+      volume         = "322",
+      year           = "2008",
+      pages          = "1224-1227",
+      doi            = "10.1126/science.1163233",
+      eprint         = "0906.3599",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-lat",
+      SLACcitation   = "%%CITATION = ARXIV:0906.3599;%%"
 }
 @article{Fabjan:2003aq,
       author         = "Fabjan, C. W. and Gianotti, F.",
@@ -83,6 +146,19 @@
       reportNumber   = "NAL-PUB-73-49-THY, FERMILAB-PUB-73-049-T",
       SLACcitation   = "%%CITATION = PHRVA,D8,3633;%%"
 }
+@article{Huovinen:2009yb,
+      author         = "Huovinen, Pasi and Petreczky, Pter",
+      title          = "{QCD Equation of State and Hadron Resonance Gas}",
+      journal        = "Nucl. Phys.",
+      volume         = "A837",
+      year           = "2010",
+      pages          = "26-53",
+      doi            = "10.1016/j.nuclphysa.2010.02.015",
+      eprint         = "0912.2541",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:0912.2541;%%"
+}
 @article{Kovtun:2004de,
       author         = "Kovtun, P. and Son, Dan T. and Starinets, Andrei O.",
       title          = "{Viscosity in strongly interacting quantum field theories
@@ -97,6 +173,37 @@
       primaryClass   = "hep-th",
       reportNumber   = "INT-PUB-04-09, UW-PT-04-04",
       SLACcitation   = "%%CITATION = HEP-TH/0405231;%%"
+}
+@article{Laschka:2011zr,
+      author         = "Laschka, Alexander and Kaiser, Norbert and Weise,
+                        Wolfram",
+      title          = "{Quark-antiquark potential to order 1/m and heavy quark
+                        masses}",
+      journal        = "Phys. Rev.",
+      volume         = "D83",
+      year           = "2011",
+      pages          = "094002",
+      doi            = "10.1103/PhysRevD.83.094002",
+      eprint         = "1102.0945",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1102.0945;%%"
+}
+@article{Maldacena:1997re,
+      author         = "Maldacena, Juan Martin",
+      title          = "{The Large N limit of superconformal field theories and
+                        supergravity}",
+      journal        = "Int. J. Theor. Phys.",
+      volume         = "38",
+      year           = "1999",
+      pages          = "1113-1133",
+      doi            = "10.1023/A:1026654312961, 10.4310/ATMP.1998.v2.n2.a1",
+      note           = "[Adv. Theor. Math. Phys.2,231(1998)]",
+      eprint         = "hep-th/9711200",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      reportNumber   = "HUTP-97-A097, HUTP-98-A097",
+      SLACcitation   = "%%CITATION = HEP-TH/9711200;%%"
 }
 @article{Nagle:2018nvi,
       author         = "Nagle, James L. and Zajc, William A.",
