--- a/thesis-defs.sty
+++ b/thesis-defs.sty
@@ -21,13 +21,13 @@
 \newcommand{\trigtt}[1] {\ensuremath{{\texttt{ \small #1}}}}
 \newcommand{\mdr}{\ensuremath{M_{\Delta}^{R}}\xspace}
 \newcommand{\calosig}{\ensuremath{\xi_{\text{cell}}}}
-\newcommand{\kt}{\ensuremath{k_\mathrm{T}}}
+\newcommand{\kt}{\ensuremath{k_\mathrm{T}}\xspace}
 %% \newcommand{\Emiss}[1]{\ensuremath{E^\text{miss}_{#1}}}
 %% \newcommand{\Emisscomp}[2]{\ensuremath{E^{\text{miss, }{#2}}_{#1}}}
-\newcommand{\HFnm}[3]{\ensuremath{H^{{#1}}_{#2,#3}}}
-\newcommand{\HTFnm}[3]{\ensuremath{H^{{#1}}_{T,#2,#3}}}
-\newcommand{\mheavy}{\ensuremath{m_{\mathrm{Heavy}}}}
-\newcommand{\rframe}{\ensuremath{R}-frame}
+%% \newcommand{\HFnm}[3]{\ensuremath{H^{{#1}}_{#2,#3}}}
+%% \newcommand{\HTFnm}[3]{\ensuremath{H^{{#1}}_{T,#2,#3}}}
+%% \newcommand{\mheavy}{\ensuremath{m_{\mathrm{Heavy}}}}
+%% \newcommand{\rframe}{\ensuremath{R}-frame}
 
 \def\undertilde#1{\mathord{\vtop{\ialign{##\crcr
 $\hfil\displaystyle{#1}\hfil$\crcr\noalign{\kern1.5pt\nointerlineskip}
