lattice and hydro discussion (part)

--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -8,6 +8,38 @@
       reportNumber   = "RM3-TH-13-1, CERN-PH-TH-2013-020",
       SLACcitation   = "%%CITATION = ARXIV:1303.2842;%%"
 }
+@article{Aoki:2006we,
+      author         = "Aoki, Y. and Endrodi, G. and Fodor, Z. and Katz, S. D.
+                        and Szabo, K. K.",
+      title          = "{The Order of the quantum chromodynamics transition
+                        predicted by the standard model of particle physics}",
+      journal        = "Nature",
+      volume         = "443",
+      year           = "2006",
+      pages          = "675-678",
+      doi            = "10.1038/nature05120",
+      eprint         = "hep-lat/0611014",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-lat",
+      SLACcitation   = "%%CITATION = HEP-LAT/0611014;%%"
+}
+@article{Aoki:2009sc,
+      author         = "Aoki, Y. and Borsanyi, Szabolcs and Durr, Stephan and
+                        Fodor, Zoltan and Katz, Sandor D. and Krieg, Stefan and
+                        Szabo, Kalman K.",
+      title          = "{The QCD transition temperature: results with physical
+                        masses in the continuum limit II.}",
+      journal        = "JHEP",
+      volume         = "06",
+      year           = "2009",
+      pages          = "088",
+      doi            = "10.1088/1126-6708/2009/06/088",
+      eprint         = "0903.4155",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-lat",
+      reportNumber   = "WUB-09-01, ITP-BUDAPEST-644, RBRC-782",
+      SLACcitation   = "%%CITATION = ARXIV:0903.4155;%%"
+}
 @article{Aoki:2016frl,
       author         = "Aoki, S. and others",
       title          = "{Review of lattice results concerning low-energy particle
@@ -78,6 +110,16 @@
       pages          = "53-62",
       doi            = "10.1103/PhysRevD.31.53",
       SLACcitation   = "%%CITATION = PHRVA,D31,53;%%"
+}
+@article{Denicol:2016bjh,
+      author         = "Denicol, Gabriel S. and Noronha, Jorge",
+      title          = "{Divergence of the Chapman-Enskog expansion in
+                        relativistic kinetic theory}",
+      year           = "2016",
+      eprint         = "1608.07869",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1608.07869;%%"
 }
 @article{Durr:2008zz,
       author         = "Durr, S. and others",
@@ -159,6 +201,28 @@
       primaryClass   = "hep-ph",
       SLACcitation   = "%%CITATION = ARXIV:0912.2541;%%"
 }
+@article{Israel:1976tn,
+      author         = "Israel, W.",
+      title          = "{Nonstationary irreversible thermodynamics: A Causal
+                        relativistic theory}",
+      journal        = "Annals Phys.",
+      volume         = "100",
+      year           = "1976",
+      pages          = "310-331",
+      doi            = "10.1016/0003-4916(76)90064-6",
+      SLACcitation   = "%%CITATION = APNYA,100,310;%%"
+}
+@article{Israel:1979wp,
+      author         = "Israel, W. and Stewart, J. M.",
+      title          = "{Transient relativistic thermodynamics and kinetic
+                        theory}",
+      journal        = "Annals Phys.",
+      volume         = "118",
+      year           = "1979",
+      pages          = "341-372",
+      doi            = "10.1016/0003-4916(79)90130-1",
+      SLACcitation   = "%%CITATION = APNYA,118,341;%%"
+}
 @article{Kovtun:2004de,
       author         = "Kovtun, P. and Son, Dan T. and Starinets, Andrei O.",
       title          = "{Viscosity in strongly interacting quantum field theories
@@ -205,6 +269,20 @@
       reportNumber   = "HUTP-97-A097, HUTP-98-A097",
       SLACcitation   = "%%CITATION = HEP-TH/9711200;%%"
 }
+@article{Miller:2007ri,
+      author         = "Miller, Michael L. and Reygers, Klaus and Sanders,
+                        Stephen J. and Steinberg, Peter",
+      title          = "{Glauber modeling in high energy nuclear collisions}",
+      journal        = "Ann. Rev. Nucl. Part. Sci.",
+      volume         = "57",
+      year           = "2007",
+      pages          = "205-243",
+      doi            = "10.1146/annurev.nucl.57.090506.123020",
+      eprint         = "nucl-ex/0701025",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = NUCL-EX/0701025;%%"
+}
 @article{Nagle:2018nvi,
       author         = "Nagle, James L. and Zajc, William A.",
       title          = "{Small System Collectivity in Relativistic Hadron and
@@ -214,6 +292,17 @@
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-ex",
       SLACcitation   = "%%CITATION = ARXIV:1801.03477;%%"
+}
+@article{Niemi:2014wta,
+      author         = "Niemi, H. and Denicol, G. S.",
+      title          = "{How large is the Knudsen number reached in fluid
+                        dynamical simulations of ultrarelativistic heavy ion
+                        collisions?}",
+      year           = "2014",
+      eprint         = "1404.7327",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1404.7327;%%"
 }
 @article{Romatschke:2016hle,
       author         = "Romatschke, Paul",
