--- a/acronyms.tex
+++ b/acronyms.tex
@@ -1,6 +1,8 @@
 \chapter{List of abbreviations}
 
 \begin{acronym}
+  \acro{AdS}{Anti-de Sitter}
+  \acro{CFT}{conformal field theory}
   \acro{CTP}{central trigger processor}
   \acro{CGC}{color-glass condensate}
   %% \acro{DCA}{distance at closest approach}
