--- a/acronyms.tex
+++ b/acronyms.tex
@@ -9,6 +9,7 @@
   \acro{DIS}{deep inelastic scattering}
   \acro{EF}{Event Filter}
   \acro{EM}{electromagnetic}
+  \acro{EoS}{equation of state}
   \acro{FCal}{forward calorimeter}
   \acro{HEC}{hadronic end-cap}
   \acro{HLT}{High Level Trigger}
