eta/s discussion, title page changes

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -29,6 +29,7 @@
   \acro{NLO}{next-to-leading order}
   \acro{PDF}{parton distribution function}
   \acro{PID}{particle identification}
+  \acro{pQCD}{perturbative \ac{QCD}}
   \acro{PS}{Proton Synchrotron}
   \acro{PSB}{Proton Synchrotron Booster}
   \acro{PV}{primary vertex}
