--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -59,6 +59,50 @@
                         RM3-TH-16-7, ROM2F-2016-05, YITP-16-77",
       SLACcitation   = "%%CITATION = ARXIV:1607.00299;%%"
 }
+@article{Arnold:2000dr,
+      author         = "Arnold, Peter Brockway and Moore, Guy D. and Yaffe,
+                        Laurence G.",
+      title          = "{Transport coefficients in high temperature gauge
+                        theories. 1. Leading log results}",
+      journal        = "JHEP",
+      volume         = "11",
+      year           = "2000",
+      pages          = "001",
+      doi            = "10.1088/1126-6708/2000/11/001",
+      eprint         = "hep-ph/0010177",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "UW-PT-00-15",
+      SLACcitation   = "%%CITATION = HEP-PH/0010177;%%"
+}
+@article{Arnold:2006fz,
+      author         = "Arnold, Peter Brockway and Dogan, Caglar and Moore, Guy
+                        D.",
+      title          = "{The Bulk Viscosity of High-Temperature QCD}",
+      journal        = "Phys. Rev.",
+      volume         = "D74",
+      year           = "2006",
+      pages          = "085021",
+      doi            = "10.1103/PhysRevD.74.085021",
+      eprint         = "hep-ph/0608012",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/0608012;%%"
+}
+@article{Astrakhantsev:2017nrs,
+      author         = "Astrakhantsev, N. and Braguta, Viktor and Kotov, Andrey",
+      title          = "{Temperature dependence of shear viscosity of
+                        $SU(3)$--gluodynamics within lattice simulation}",
+      journal        = "JHEP",
+      volume         = "04",
+      year           = "2017",
+      pages          = "101",
+      doi            = "10.1007/JHEP04(2017)101",
+      eprint         = "1701.02266",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-lat",
+      SLACcitation   = "%%CITATION = ARXIV:1701.02266;%%"
+}
 @article{Bazavov:2014pvz,
       author         = "Bazavov, A. and others",
       title          = "{Equation of state in ( 2+1 )-flavor QCD}",
@@ -73,6 +117,22 @@
       primaryClass   = "hep-lat",
       reportNumber   = "BNL-105928-2014-JA",
       SLACcitation   = "%%CITATION = ARXIV:1407.6387;%%"
+}
+@article{Baier:2007ix,
+      author         = "Baier, Rudolf and Romatschke, Paul and Son, Dam Thanh and
+                        Starinets, Andrei O. and Stephanov, Mikhail A.",
+      title          = "{Relativistic viscous hydrodynamics, conformal
+                        invariance, and holography}",
+      journal        = "JHEP",
+      volume         = "04",
+      year           = "2008",
+      pages          = "100",
+      doi            = "10.1088/1126-6708/2008/04/100",
+      eprint         = "0712.2451",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      reportNumber   = "BI-TP-2007-29, INT-PUB-07-45, SHEP-07-47",
+      SLACcitation   = "%%CITATION = ARXIV:0712.2451;%%"
 }
 @article{Borsanyi:2013bia,
       author         = "Borsanyi, Szabocls and Fodor, Zoltan and Hoelbling,
@@ -100,6 +160,21 @@
       pages          = "156-159",
       doi            = "10.1103/PhysRevLett.22.156",
       SLACcitation   = "%%CITATION = PRLTA,22,156;%%"
+}
+@article{Csernai:2006zz,
+      author         = "Csernai, Laszlo P. and Kapusta, Joseph.I. and McLerran,
+                        Larry D.",
+      title          = "{On the Strongly-Interacting Low-Viscosity Matter Created
+                        in Relativistic Nuclear Collisions}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "97",
+      year           = "2006",
+      pages          = "152303",
+      doi            = "10.1103/PhysRevLett.97.152303",
+      eprint         = "nucl-th/0604032",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = NUCL-TH/0604032;%%"
 }
 @article{Danielewicz:1984ww,
       author         = "Danielewicz, P. and Gyulassy, M.",
@@ -187,6 +262,20 @@
       doi            = "10.1103/PhysRevD.8.3633",
       reportNumber   = "NAL-PUB-73-49-THY, FERMILAB-PUB-73-049-T",
       SLACcitation   = "%%CITATION = PHRVA,D8,3633;%%"
+}
+@article{Heinz:2013th,
+      author         = "Heinz, Ulrich and Snellings, Raimond",
+      title          = "{Collective flow and viscosity in relativistic heavy-ion
+                        collisions}",
+      journal        = "Ann. Rev. Nucl. Part. Sci.",
+      volume         = "63",
+      year           = "2013",
+      pages          = "123-151",
+      doi            = "10.1146/annurev-nucl-102212-170540",
+      eprint         = "1301.2826",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1301.2826;%%"
 }
 @article{Huovinen:2009yb,
       author         = "Huovinen, Pasi and Petreczky, Pter",
