--- a/thesis-defs.sty
+++ b/thesis-defs.sty
@@ -145,10 +145,11 @@ $\hfil\tilde{}\hfil$\crcr\noalign{\kern1.5pt}}}}}
 %% \newcommand{\Secref}[1]{Section~\ref{#1}}
 %% \newcommand{\tabref}[1]{Table~\ref{#1}}
 
-\def\lsim{\mathrel{\rlap{\lower4pt\hbox{\hskip1pt$\sim$}}
-    \raise1pt\hbox{$<$}}}                % less than or approx. symbol
-\def\gsim{\mathrel{\rlap{\lower4pt\hbox{\hskip1pt$\sim$}}
-    \raise1pt\hbox{$>$}}}                % greater than or approx. symbol
+% defined with \gtrsim and \lesssim
+%% \def\lsim{\mathrel{\rlap{\lower4pt\hbox{\hskip1pt$\sim$}}
+%%     \raise1pt\hbox{$<$}}}                % less than or approx. symbol
+%% \def\gsim{\mathrel{\rlap{\lower4pt\hbox{\hskip1pt$\sim$}}
+%%     \raise1pt\hbox{$>$}}}                % greater than or approx. symbol
 
 %\renewcommand{\thesubfigure}{\alpha{subfigure}}
 %\makeatletter
@@ -180,6 +181,7 @@ $\hfil\tilde{}\hfil$\crcr\noalign{\kern1.5pt}}}}}
 \newcommand{\Lint}{\ensuremath{L_\mathrm{int}}\xspace}
 
 \newcommand{\lqcd}{\ensuremath{\Lambda_\textrm{QCD}}\xspace}
+\newcommand{\mfp}{\ensuremath{\lambda_\textrm{mfp}}\xspace}
 
 %% \newcommand{\PbPbenergy}{$\sqrt{s_{\mathrm{NN}}}=2.76~\tev$\xspace}
 \newcommand{\pPbenergy}{$\sqrt{s_{\mathrm{NN}}}=5.02~\tev$\xspace}
