--- a/acronyms.tex
+++ b/acronyms.tex
@@ -12,7 +12,9 @@
   \acro{EoS}{equation of state}
   \acro{FCal}{forward calorimeter}
   \acro{HEC}{hadronic end-cap}
+  \acro{HighET}{high transverse energy}
   \acro{HLT}{High Level Trigger}
+  \acro{HMT}{high-multiplicity trigger}
   \acro{HRG}{hadron resonance gas}
   \acro{ID}{inner detector}
   \acro{IP}{interaction point}
