--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -8,6 +8,19 @@
       reportNumber   = "RM3-TH-13-1, CERN-PH-TH-2013-020",
       SLACcitation   = "%%CITATION = ARXIV:1303.2842;%%"
 }
+@article{Alvioli:2013vk,
+      author         = "Alvioli, M. and Strikman, M.",
+      title          = "{Color fluctuation effects in proton-nucleus collisions}",
+      journal        = "Phys. Lett. B",
+      volume         = "722",
+      year           = "2013",
+      pages          = "347",
+      doi            = "10.1016/j.physletb.2013.04.042",
+      eprint         = "1301.0728",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1301.0728;%%"
+}
 @article{Aoki:2006we,
       author         = "Aoki, Y. and Endrodi, G. and Fodor, Z. and Katz, S. D.
                         and Szabo, K. K.",
