--- a/thesis-defs.sty
+++ b/thesis-defs.sty
@@ -160,10 +160,7 @@ $\hfil\tilde{}\hfil$\crcr\noalign{\kern1.5pt}}}}}
 \newcommand{\powheg}{\textsc{Powheg}}
 \newcommand{\herwig}{\textsc{Herwig}}
 \newcommand{\pythia}{\textsc{Pythia}}
-\newcommand{\madgraph}{\textsc{Madgraph}}
-\newcommand{\sherpa}{\textsc{Sherpa}}
 \newcommand{\cteqVER}[1]{\textsc{CTEQ#1}}
-\newcommand{\mrstVER}[1]{\textsc{MRST#1}}
 \newcommand{\cteq}{\textsc{CTEQ6.6}}
 
 \def\mean#1{\left< #1 \right>}
@@ -183,8 +180,11 @@ $\hfil\tilde{}\hfil$\crcr\noalign{\kern1.5pt}}}}}
 \newcommand{\lqcd}{\ensuremath{\Lambda_\textrm{QCD}}\xspace}
 \newcommand{\mfp}{\ensuremath{\lambda_\textrm{mfp}}\xspace}
 
+%% macros from flow note
+
 %% \newcommand{\PbPbenergy}{$\sqrt{s_{\mathrm{NN}}}=2.76~\tev$\xspace}
 \newcommand{\pPbenergy}{$\sqrt{s_{\mathrm{NN}}}=5.02~\tev$\xspace}
+\newcommand{\pPblumi}{$28~\inb$\xspace}
 \newcommand{\ppenergy}{$\sqs =13$~\TeV\xspace}
 \renewcommand{\AA}{\mbox{A+A}\xspace}
 %% \newcommand{\PbPb}{\mbox{Pb+Pb}\xspace} %% these are defined in atlasheavyion.sty.
@@ -209,7 +209,6 @@ $\hfil\tilde{}\hfil$\crcr\noalign{\kern1.5pt}}}}}
 \newcommand{\pta}{\ensuremath{p_{\mathrm{T}}^{\mathrm{a}}\xspace}}
 \newcommand{\ptb}{\ensuremath{p_{\mathrm{T}}^{\mathrm{b}}\xspace}}
 \newcommand{\Yint}{\ensuremath{Y_{\mathrm{int}}}\xspace}
-%\newcommand{\IntLum}{14~\inb\xspace}
 \newcommand{\PYEight}{\textsc{Pythia$\,$8}\xspace}
 %\newcommand{\zvtx}{\mbox{$z_{\mathrm{vtx}}$}}
 
