--- a/acronyms.tex
+++ b/acronyms.tex
@@ -21,6 +21,7 @@
   \acro{L1}{Level-1}
   \acro{L2}{Level-2}
   \acro{LAr}{liquid argon}
+  \acro{LCMF}{longitudinal co-moving frame}
   \acro{LEIR}{Low Energy Ion Ring}
   \acro{LHC}{Large Hadron Collider}
   \acro{linac}{linear particle accelerator}
