coulomb and review references

--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -355,6 +355,48 @@
       primaryClass   = "hep-ph",
       SLACcitation   = "%%CITATION = ARXIV:1102.0945;%%"
 }
+@article{Lednicky:2005tb,
+      author         = "Lednicky, Richard",
+      title          = "{Finite-size effects on two-particle production in
+                        continuous and discrete spectrum}",
+      journal        = "Phys. Part. Nucl.",
+      volume         = "40",
+      year           = "2009",
+      pages          = "307",
+      doi            = "10.1134/S1063779609030034",
+      eprint         = "nucl-th/0501065",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      reportNumber   = "DIRAC-2004-06",
+      SLACcitation   = "%%CITATION = NUCL-TH/0501065;%%"
+}
+@article{Lisa:2005dd,
+      author         = "Lisa, Michael Annan and Pratt, Scott and Soltz, Ron and
+                        Wiedemann, Urs",
+      title          = "{Femtoscopy in relativistic heavy ion collisions: two decades of progress}",
+      journal        = "Ann.~Rev.~Nucl.~Part.~Sci.",
+      volume         = "55",
+      pages          = "357",
+      doi            = "10.1146/annurev.nucl.55.090704.151533",
+      year           = "2005",
+      eprint         = "nucl-ex/0505014",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = NUCL-EX/0505014;%%",
+}
+@article{Maj:2009ue,
+      author         = "Maj, Radoslaw and Mrówczy\'{n}ski, Stanislaw",
+      title          = "{Coulomb Effects in Femtoscopy}",
+      journal        = "Phys.~Rev.~C",
+      volume         = "80",
+      pages          = "034907",
+      doi            = "10.1103/PhysRevC.80.034907",
+      year           = "2009",
+      eprint         = "0903.0111",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:0903.0111;%%",
+}
 @article{Maldacena:1997re,
       author         = "Maldacena, Juan Martin",
       title          = "{The Large N limit of superconformal field theories and
