--- a/thesis.tex
+++ b/thesis.tex
@@ -126,8 +126,8 @@
 \Crefname{chapter}{Ch.}{Ch.}
 \Crefname{appendix}{App.}{App.}
 \Crefname{subsection}{Sec.}{Secs.}
-%% number down to sub-sections
-\setcounter{secnumdepth}{4} %% default is 2
+%% we want to number down to sub-sections
+\setcounter{secnumdepth}{2} %% default is 2
 
 
 %-------------------------------------------------------------------------------
@@ -152,27 +152,18 @@
 
 %\setmainfont{Linux Libertine O} %This is a really readable serif font. It renders polytonic Greek better than any other OpenType font I've found, including Times New Roman. I now use it for everything, including class handouts. Highly recommended for classicists.
 
-
-%Here is some stuff on the bibliography. You want to keep your bibliography file in the same directory as this file.
-
-%\usepackage[backend=bibtex8,style=authoryear-icomp,texencoding=utf8,bibencoding=utf8]{biblatex} %The command here uses biblatex to render your bibliography, and it tells biblatex to use Unicode fonts. You can change the style of your citations easily by changing the value for "style" -- I use authoryear-icomp which takes care of the id/ibid citations automatically. There are many styles available if you want to change it.
-%I have tried to use biber instead of biblatex many times, but it's never worked properly for me. I use biblatex, but feel free to try biber instead.
-
-%\addbibresource{./Bibliography.bib} %Your bibliography file. I use JabRef to keep track of my bibliography. Highly recommended, and free! You can use Zotero if you want, but I've had trouble exporting to .bib files from my Zotero database.
-
-
 %Here you can set margins and other page formatting
-
 \setlrmarginsandblock{3.175cm}{3.175cm}{*} %Left and right margin -- the dissertation office requires at least 1-inch margins
 \setulmarginsandblock{2.54cm}{2.54cm}{*}  %Upper and lower margin -- same thing, at least 1-inch margins
 \checkandfixthelayout %A function of the memoir class that finds the right number of lines per page and apparently tidies up the formatting in other mysterious ways...?
 
-% Below we start to set up the document itself, including how to use spacing throughout the dissertation.
-
 \begin{document}
 
-\sloppy %If I don't include sloppy, then Greek and Latin words screw up margins all over. If you don't include weird languages in your dissertation, you can probably leave this one out.
-\chapterstyle{chappell} % Nice formatting for chapter headings. Check out the documentation for the memoir class for other options.
+%% \sloppy %If I don't include sloppy, then Greek and Latin words screw up margins all over. If you don't include weird languages in your dissertation, you can probably leave this one out.
+%% \chapterstyle{chappell} % Check out the documentation for the memoir class for other options.
+%% \chapterstyle{bianchi}
+\chapterstyle{madsen}
+%% \chapterstyle{veelo} %% a nice style but moves page numbers to the side, which is not allowed per the comment below
 \footnotesep\baselineskip % Footnotes need to have a space between each one for Columbia's Dissertation Office.
 \DoubleSpacing %Set roomier body text throughout your writing. The dissertation office requires that you use double-spacing throughout your main body text.
 \expandafter\def\expandafter\quote\expandafter{\quote\SingleSpace} %Keep all block quotes single-spaced regardless of body text spacing.
